# Hirie

./: .gitignore  CMakeLists.txt  README.md  engine.cpp
examples/: CMakeLists.txt  generic_example.cpp
include/: hirie.h
src/: hirie.cpp  hirie.hpp
src/geometry/: matrices.cpp  matrices.hpp
src/input/: input.cpp  input.hpp
src/parsing/: parsing.cpp  parsing.hpp
src/rendering/: rendering.cpp  rendering.hpp
